--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,10 @@
       fill: #fff;
     }
 
-    .epoch.customcolors#co2 .category1 .area { fill: #F3E219; }
-    .epoch.customcolors#temperature .category1 .area { fill: #D8A341; }
-    .epoch.customcolors#humidity .category1 .area { fill: #C14F11; }
-    .epoch.customcolors#soundlevel .category1 .area { fill: #077074; }
+    .epoch.customcolors#co2 .category1 .area { fill: #F3E219; stroke: #fff; stroke-width: 5px; }
+    .epoch.customcolors#temperature .category1 .area { fill: #D8A341; stroke: #fff; stroke-width: 5px; }
+    .epoch.customcolors#humidity .category1 .area { fill: #C14F11; stroke: #fff; stroke-width: 5px; }
+    .epoch.customcolors#soundlevel .category1 .area { fill: #077074; stroke: #fff; stroke-width: 5px; }
 
     .graphgroup {
       width: 100%;
