--- a/slides/index.html
+++ b/slides/index.html
@@ -9,7 +9,7 @@
                 <section>
                     <h3> Awair </h3>
                     </br>
-                    <p>  Smart real-time sensor fusion of <strong> air, noise and light pollution</strong> to provide actionable insights to make outdoor and indoor environments liveable and green. </p>
+                    <p>  Real-time & cheap sensor fusion of <strong> air, noise and light pollution</strong> to provide actionable insights to make outdoor and indoor environments liveable and green. </p>
                     </br>
                     <!-- <p> What if the city had a brain of its own?  </p> -->
                     <!-- <p> What if we made sense of the immense of data that smart sensors can give you? </p> -->
