--- a/slides/index.html
+++ b/slides/index.html
@@ -7,7 +7,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <h3> co2nscious </h3>
+                    <h3> co<sub>2</sub>nscious </h3>
                     </br>
                     <p>  Real-time & cheap sensor fusion of <strong> air, noise and light pollution</strong> to provide actionable insights to make outdoor and indoor environments liveable and green. </p>
                     </br>
